# ocsai

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/ocsai1/: finetune-gt_alltests2_no-testdata_prepared_train.jsonl  finetune-gt_alltests2_no-testdata_prepared_val.jsonl  finetune-gt_alltests2_no-testdata_prepared_val_chat.jsonl  finetune-gt_main2_prepared_test.jsonl  finetune-gt_main2_prepared_train.jsonl  finetune-gt_main2_prepared_train_chat.jsonl  finetune-gt_main2_prepared_val.jsonl  finetune-gt_main2_prepared_val_chat.jsonl
notebooks/: cleanDatasets.ipynb  combineDatasets.ipynb  rewrite_ocsai1_train_data.ipynb  train-ocsai1-llama.ipynb  trainGPT.ipynb
notebooks/evaluation/: LogProbsOcsai1.ipynb
notebooks/ocsai1/: rewrite_ocsai1_train_data.ipynb
notebooks/ocsai2-dataprep/: combineDatasets.ipynb  crossLingualClustering.ipynb  fixQuestionGrammar.ipynb  trainOcsai1.5.ipynb
notebooks/supplemental/: number-token-counts.ipynb
ocsai/: types.py  utils.py
ocsai/cache/: __init__.py  ocsai_cache.py  ocsai_parquet_cache.py  ocsai_postreg_cache.py  ocsai_redis_cache.py
ocsai/data/: __init__.py  loader.py  preprocess.py
ocsai/inference/: __init__.py  base_scorer.py  chat_scorer.py  classic_scorer.py  gpt_base_scorer.py  gpt_chat_scorer.py  gpt_classic_scorer.py
ocsai/llm_interface/: __init__.py  anthropic_interface.py  llm_base_interface.py  openai_chat_interface.py  openai_legacy_interface.py
ocsai/parsers/: __init__.py  (+2 more)
tests/: test_gpt_classic_chat_prompter.py  test_gpt_ocsai1_chat_prompter.py  test_gpt_ocsai2_prompter.py
(+39 files in other folders)
